# oxipy

./: .gitignore  README.md  pyproject.toml
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
docs/: extending-models.md  templates.md
oxi/: __init__.py  adapter.py  conf.py  core.py  exception.py  node.py  view.py
oxi/interfaces/: __init__.py  base.py  contract.py  utils.py
oxi/interfaces/models/: __init__.py  eltex.py  h3c.py  huawei.py  keenetic.py  mikrotik.py  qtech.py  quasar.py
oxi/interfaces/models/templates/: _template.ttp  eltex.ttp  h3c.ttp  huawei.ttp  keenetic.ttp  mikrotik.ttp  qtech.ttp  quasar.ttp
tests/: conftest.py  test_models.py  test_network.py  test_units.py  test_view.py
tests/fixtures/eltex/: config.conf  config.expected.json  not_found.conf
tests/fixtures/h3c/: config.conf  config.expected.json
tests/fixtures/huawei/: config.conf  config.expected.json
tests/fixtures/keenetic/: config.conf  config.expected.json
tests/fixtures/mikrotik/: config.conf  config.expected.json
tests/fixtures/qtech/: config_1.conf  config_1.expected.json  config_2.conf  config_2.expected.json
tests/fixtures/quasar/: config_1.conf  config_1.expected.json  config_2.conf  config_2.expected.json
