[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oxipy"
version = "0.1.0"
description = "Oxidized API client"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ttp>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oxi*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"oxi" = ["**/*.ttp"]