[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oxipy"
version = "0.1.0"
description = "Python client for Oxidized API with TTP-based config parsing"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ttp>=0.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["oxi*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"oxi" = ["**/*.ttp"]